tests/NormalTests/paczka1/small_fuzzy/39619641.err
Error in line 4: FcMlqE A978 41,4
Error in line 1: mZby3hc A56 11,7
Error in line 11: dk4YYLyNdm S867 10,6
Error in line 14: A56 A978 -4,7
